[metadata]
name = rubbersearch
author = Clement Demonchy
summary = Pet projet that parse  HN Search and expose result as a Rest API
description-file = README.md
license = MIT
classifier =
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Operating System :: OS Independent
    Programming Language :: Python

keywords =
    console
     HN Search

[files]
packages =
    rubbersearch

[wheel]
python-tag = py3
